--- a/presentations/02presentation_unions_optional_collections.qmd
+++ b/presentations/02presentation_unions_optional_collections.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Flee You Fools"
+title: "Unions, Optional and Collection Type ABCs"
 format:
   revealjs:
     width: 1600
@@ -117,7 +117,7 @@ print("Total character count: ",
 1. No type hint is shown!
 
 ## {auto-animate=true}
-<h2 data-id="title">Type: expects a string OR a list of strings and returns an integer</h2>
+<h2 data-id="title">Intput: string OR a list of strings and returns an integer</h2>
 
 ```{python}
 #| code-line-numbers: "|1"
@@ -173,13 +173,26 @@ print( # <1>
 <img src="images/type_hinting.png"
      style="width:75%; display:block; margin:auto;" />
 
-
 ## {auto-animate="true"}
 <h2 data-id="title">Safe and flexible functions with clear contracts</h2>
 
 
 ``` {python}
-#| code-line-numbers: "|1-2"
+#| code-line-numbers: ""
+def total_character_count(words: str | list[str]) -> int:
+    total = 0
+    for char in words:
+        total += len(char)
+    return total
+```
+<h3 data-id="title">Let's make it more flexible!</h2>
+
+## {auto-animate="true"}
+<h2 data-id="title">Refactoring to be more usable</h2>
+
+
+``` {python}
+#| code-line-numbers: "1-2|3|"
 from collections.abc import Iterable
 
 def total_character_count(words: Iterable[str]) -> int:
@@ -210,3 +223,37 @@ print("Count: ",total_character_count("Hello world!"))
 print("Count: ",total_character_count([("Hello"," world!")])) # <1>
 ```
 1. Argument of type "Literal[12345]" cannot be assigned to parameter "words" of type "Iterable[str]"
+
+## {auto-animate="true"}
+<h2 data-id="title">Unions, Optional and Collection Types</h2>
+
+``` {python}
+#| code-line-numbers: "1-6|1-3|4|5|6|8-11|13-14|16-17|19-20|22-23|25-26|"
+# Unions and Optional
+
+value: int | str = 42
+name: str | None = None 
+words: str | list[str] = ["hello", "world"]
+mixed: list[str | int] = ["a", 1]
+
+# Collection Type ABCs
+
+from collections.abc import Iterable
+words: Iterable[str] = ("a", "b")
+
+from collections.abc import Iterator
+it: Iterator[int] = iter([1, 2, 3])
+
+from collections.abc import Sequence
+seq: Sequence[str] = ["a", "b"]
+
+from collections.abc import Collection
+c: Collection[int] = {1, 2, 3}
+
+from collections.abc import Container
+c: Container[str] = {"a", "b"}
+
+from collections.abc import Reversible
+r: Reversible[int] = [1, 2, 3]
+
+```
