--- a/presentations/06presentation_what_has_changed.qmd
+++ b/presentations/06presentation_what_has_changed.qmd
@@ -20,7 +20,7 @@ theme: dark
 ```
 
 ## {auto-animate=true}
-<h2 data-id="title">Built-in Generic Types</h2>
+<h2 data-id="title">Modern Generic Type Syntax</h2>
 
 ```{python}
 #| code-line-numbers: "1-3|6-7"
@@ -34,7 +34,7 @@ def f(xs: list[int]) -> dict[str, int]: ...
 ```
 
 ## {auto-animate=true}
-<h2 data-id="title">Union Types</h2>
+<h2 data-id="title">PEP 604 Union Syntax</h2>
 
 ```{python}
 #| code-line-numbers: "1-4|7-9"
@@ -50,7 +50,7 @@ y: int | None
 ```
 
 ## {auto-animate=true}
-<h2 data-id="title">Type parameters become syntax
+<h2 data-id="title">Modern type parameter syntax
 </h2>
 
 ```{python}
@@ -66,11 +66,11 @@ def first[T](xs: list[T]) -> T: ...
 ```
 
 ## {auto-animate=true}
-<h2 data-id="title">Type aliases become statements
+<h2 data-id="title">Type Alias Statements
 </h2>
 
 ```{python}
-#| code-line-numbers: "1-4|7-9"
+#| code-line-numbers: "1-3|6-8"
 #  OLD WAY
 from typing import TypeAlias
 UserId: TypeAlias = int
@@ -82,21 +82,22 @@ type Box[T] = dict[str, T]
 ```
 
 ## {auto-animate=true}
-<h2 data-id="title">Forward references in Annotations
+<h2 data-id="title">Simplified Forward References
 </h2>
 
 ```{python}
-#| code-line-numbers: "1-4|5-8|10-12"
+#| code-line-numbers: "1-4|5-8|10-13"
 #  OLD WAY (Pre-Python 3.7)
 class User:
     def manager(self) -> "User": ...
 
-#  OLD WAY: (Python 3.7 - 3.13)
+#  OLD WAY: (Python 3.7 - 3.10)
 from __future__ import annotations
 class User:
     def manager(self) -> User: ...
 
-#  NEW WAY: (Python 3.14)
+# MODERN BEHAVIOR (Python 3.14+ PEP 649)
+# Annotations are lazily evaluated by default
 class User:
     def manager(self) -> User: ...
 ```
